Fix Base64 for Java 11